--- a/2-2-22.ipynb
+++ b/2-2-22.ipynb
@@ -1456,9 +1456,364 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70d2cb2c",
+   "metadata": {},
+   "source": [
+    "### loops  \n",
+    "- for,while  \n",
+    "- for loop::a for loop in python is a control flow statementthat used to repeatedly excute a group of statements as long as the condition is statisfied such a type of statement is also known as an iterative statement. Therfore a loop is an iterative statement"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea02fca0",
+   "id": "58672d91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "syntax:: :\n",
+    "            for iter in iterable: # range predefined function in the position of iterable\n",
+    "                statement1\n",
+    "                statement2\n",
+    "                statement3\n",
+    "                ----------\n",
+    "                statementn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ced0264d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):  \n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "85150ccd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,1,2,3,4,"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):  \n",
+    "    print(i,end=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6c3127cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,2,4,6,8,10,"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,11,2):  \n",
+    "    print(i,end=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "207c8aa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 4 6 8 10 12 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 52 54 56 58 60 62 64 66 68 70 72 74 76 78 80 82 84 86 88 90 92 94 96 98 100 \n",
+      "even numbercount: 51\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print the even numbers in the range of 0 to 100 and print even number count\n",
+    "c=0\n",
+    "for i in range(0,101,2):\n",
+    "    c=c+1\n",
+    "    print(i,end=\" \")\n",
+    "print(\"\\neven numbercount:\",c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "608285b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 4 6 8 10 12 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 52 54 56 58 60 62 64 66 68 70 72 74 76 78 80 82 84 86 88 90 92 94 96 98 100 \n",
+      "even number count 51\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=0\n",
+    "for i in range(0,101,2):  \n",
+    "    if i%2==0:\n",
+    "        c=c+1\n",
+    "    print(i,end=\" \")\n",
+    "print(\"\\neven number count\",c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6adc8e7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "2020\n",
+      "2000 2004 2008 2012 2016 2020 \n",
+      "years count: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print leap year from the range of 2000 to 2020 ,print year\n",
+    "x=int(input())  \n",
+    "y=int(input())  \n",
+    "c=0  \n",
+    "for i in range(x,y+1):  \n",
+    "     if(i%400==0) and (i%100!=0) or (i%4==0):\n",
+    "        c=c+1\n",
+    "        print(i,end=\" \")  \n",
+    "print(\"\\nyears count:\",c)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b02f2927",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n",
+      "30\n",
+      "35\n",
+      "40\n",
+      "45\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print 5th table\n",
+    "a=5  \n",
+    "for i in range(1,11,1):\n",
+    "     j=a*i\n",
+    "     print(j)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b7d9cee8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 * 1 = 5\n",
+      "5 * 2 = 10\n",
+      "5 * 3 = 15\n",
+      "5 * 4 = 20\n",
+      "5 * 5 = 25\n",
+      "5 * 6 = 30\n",
+      "5 * 7 = 35\n",
+      "5 * 8 = 40\n",
+      "5 * 9 = 45\n",
+      "5 * 10 = 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print 5th table\n",
+    "n=5\n",
+    "for i in range(1,11):\n",
+    "    print(n,\"*\",i,\"=\",a*i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a45f66a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1 5 "
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "for i in range(1,n+1):\n",
+    "    if(n%i==0):\n",
+    "      print(i,end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "055ea258",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "198\n"
+     ]
+    }
+   ],
+   "source": [
+    "# I/p=aba\n",
+    "# 97+98+97=292\n",
+    "# o/p=292\n",
+    "a=input()\n",
+    "s=0\n",
+    "for i in a:\n",
+    "    s=s+ord(i)\n",
+    "print(s)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d4dd1f56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "c=0\n",
+    "for i in range(1,n+1):\n",
+    "    if(n%i==0):\n",
+    "        c=c+1 \n",
+    "if(c==2):\n",
+    "      print(\"prime number\")\n",
+    "else:\n",
+    "      print(\"not prime number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "afdbc909",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 4 6 8 10 \n",
+      "even numbers count 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print 0 to 10 even numbers and odd numbers\n",
+    "c=0\n",
+    "for i in range(0,11,2):\n",
+    "    c=c+1\n",
+    "    print(i,end=\" \")\n",
+    "print(\"\\neven numbers count\",c)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "322fd5cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10\n",
+      "even numbers are: 0 2 4 6 8 10 \n",
+      "odd numbers are: 1 3 5 7 9 "
+     ]
+    }
+   ],
+   "source": [
+    "# print 0 to 10 even numbers and odd numbers\n",
+    "s=int(input())\n",
+    "e=int(input())\n",
+    "print(\"even numbers are:\",end=\" \")\n",
+    "for i in range(s,e+1):\n",
+    "    if i%2==0:\n",
+    "        print(i,end=\" \")\n",
+    "print(\"\\nodd numbers are:\",end=\" \") \n",
+    "for i in range(s,e+1):\n",
+    "    if i%2!=0:\n",
+    "        print(i,end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "539883e2",
    "metadata": {},
    "outputs": [],
    "source": []
