--- a/3-2-2022.ipynb
+++ b/3-2-2022.ipynb
@@ -1878,8 +1878,12 @@
     "    - list in one of the data structure in python\n",
     "    - list in mutable\n",
     "    - represented with []\n",
+    "    - slicing,indexing  are same as the string concepts\n",
     "    - List in mutable\n",
     "- Tuple\n",
+    "    - tuple represented vth()\n",
+    "    - tuple is immutableh\n",
+    "- set    \n",
     "- Dictionaries \n",
     "- Dt are two types:\n",
     "     - Immutable\n",
