--- a/4-2-22.ipynb
+++ b/4-2-22.ipynb
@@ -2899,8 +2899,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "29ece999",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "353987e3",
+   "metadata": {},
+   "source": [
+    "## mobile validations\n",
+    "- 10 digits\n",
+    "- starts with indian num+91\n",
+    "- starts with 9,8,7,6\n",
+    "## gmail validations\n",
+    "- length- user mentioned\n",
+    "- adding caps letters and small letters with special characters and digits\n",
+    "- @gmail.com,@yahoo.com,@vasavi.com"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c6f3b59",
+   "metadata": {},
+   "source": [
+    "- patterna::\n",
+    "     - ^ - start\n",
+    "     - $ - end\n",
+    "     - [0-9] ---> numbers\n",
+    "     - [a-z] ---> small alphabets\n",
+    "     - [A-Z] ---> caps alphabets\n",
+    "     - [a-zA-z] ---> both caps and small characters\n",
+    "     - [@] ---> special character\n",
+    "     - [.] ---> for mention\n",
+    "     - [0-9]{4} ---> we have to give 4 numbers\n",
+    "     - [0-9]{6} ---> we have to give 6 numbers\n",
+    "     - | ---> for another pattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "017c5521",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9603858043\n",
+    "\n",
+    "# pattern=^[6-9][0-9]{9}$\n",
+    "\n",
+    "# +91 9989814950\n",
+    "\n",
+    "# pattern=^[+][9][6-9][0-9]{9}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "979345c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter phone number9989814950\n",
+      "valid number\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "phone_no=input(\"enter phone number\")\n",
+    "pattern=\"^[6-9][0-9]{9}$|^[+][9][6-9][0-9]{9}$\"\n",
+    "if re.match(pattern,phone_no):\n",
+    "    print(\"valid number\")\n",
+    "else:\n",
+    "    print(\"invalid number\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32e69323",
+   "metadata": {},
+   "source": [
+    "## email validations\n",
+    "- 1.user name@domain\n",
+    "   - username specifiations\n",
+    "     - a -zA-z-9\n",
+    "     - special symbol:[]\n",
+    "         - length-6 to 20 characters\n",
+    "- 2.domain\n",
+    "    - a-z length-5 to 10 characters\n",
+    "    - A-Z length 2 to 5 ----in.org"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3e1c58a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter email idvasavi99@gmail.com\n",
+      "valid email\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vasavi99@gmail.com\n",
+    "email_id=input(\"enter email id\")\n",
+    "pattern=\"^[a-z]{6}[9][9][@][a-z]{5}[.][a-z]{3}\"\n",
+    "if re.match(pattern,email_id):\n",
+    "    print(\"valid email\")\n",
+    "else:\n",
+    "    print(\"invalid email\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4be51ac3",
    "metadata": {},
    "outputs": [],
    "source": []
