--- a/5-2-2022.ipynb
+++ b/5-2-2022.ipynb
@@ -452,12 +452,937 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "295ff912",
+   "metadata": {},
+   "source": [
+    "### Functions\n",
+    "- builtin functions\n",
+    "    - already existed\n",
+    "    - ex:print(),input(),len(),int()\n",
+    "- user defined functions\n",
+    "    - which are defined by user\n",
+    "    - ex:any user can create the functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6284f84",
+   "id": "44055d74",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "syntax for functions:\n",
+    "def function_name(arguments):# function definition\n",
+    "    statements\n",
+    "    statements\n",
+    "function_name(parameters)# function calling    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dfdf206d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "even number\n"
+     ]
+    }
+   ],
+   "source": [
+    "# even or odd\n",
+    "n=int(input())\n",
+    "if n%2==0:\n",
+    "    print(\"even number\")\n",
+    "else:\n",
+    "    print(\"odd number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6d7301ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "even\n"
+     ]
+    }
+   ],
+   "source": [
+    "def even_odd(x):\n",
+    "    if x%2==0:\n",
+    "        print(\"even\")\n",
+    "    else:\n",
+    "        print(\"odd\")\n",
+    "even_odd(56)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "84de4cf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n",
+      "odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "def even_odd(x):\n",
+    "    if x%2==0:\n",
+    "        print(\"even\")\n",
+    "    else:\n",
+    "        print(\"odd\")\n",
+    "even_odd(int(input()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4e601bfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "not prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "# prime number\n",
+    "def prime_check(n):\n",
+    "    count=0\n",
+    "    for i in range(1,n+1):\n",
+    "       if n%i==0:\n",
+    "        count+=1\n",
+    "    if count==2:\n",
+    "        print(\"prime number\")\n",
+    "    else:\n",
+    "        print(\"not prime number\")\n",
+    "prime_check(int(input()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c483232a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "987\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_prime(n):\n",
+    "    count=0\n",
+    "    for i in range(2,n+1):\n",
+    "        if n%i==0:\n",
+    "            return False\n",
+    "        return True\n",
+    "is_prime(int(input()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "67097915",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "sum of the factors: 6\n",
+      "perfect number\n"
+     ]
+    }
+   ],
+   "source": [
+    "# perfect number:given number is equals to the sum of the factors of that number\n",
+    "# 6--->1+2+3=6(perfect number)\n",
+    "# 8--->1+2+4=7(not a perfect number)\n",
+    "def perfect_num(a):\n",
+    "    fact_sum=0\n",
+    "    for i in range(1,a):\n",
+    "        if a%i==0:\n",
+    "            fact_sum=fact_sum+i\n",
+    "    print(\"sum of the factors:\",fact_sum)\n",
+    "    if a==fact_sum:\n",
+    "        print(\"perfect number\")\n",
+    "    else:\n",
+    "        print(\"not a perfect number\")\n",
+    "perfect_num(int(input()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6115e9b",
+   "metadata": {},
+   "source": [
+    "- comprehensions\n",
+    "- iterators and generators\n",
+    "- functional programming\n",
+    "### comprehensions\n",
+    "- it is a program of creating new sequence from existing sequence\n",
+    "- advantages::less code,easy to understand\n",
+    "- Types:\n",
+    "    - list comprehension\n",
+    "    - dictonary comprehension\n",
+    "    - set comprehension\n",
+    "    - generator comprehension\n",
+    "- list comprehension\n",
+    "    - easy way to create,more efficient,and also run fast\n",
+    "    - syntax::[expression for item list if condition]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e5c4904",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# normal list syntax:\n",
+    "for item in list:\n",
+    "    if condition:\n",
+    "        print(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3ecf4caf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 "
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,11):\n",
+    "    print(i,end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "929a4986",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "li=[]\n",
+    "for i in range (1,11):\n",
+    "    li.append(i)\n",
+    "print(li) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cbbf2ed7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "li=[i for i in range(1,11)]  # list- comprehension\n",
+    "print(li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bfd6d044",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 10, 15, 20, 25, 30, 35, 40, 45, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "li=[i*5 for i in range(1,11)]  # list- comprehension\n",
+    "print(li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "bf4b01f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "li=[i for i in range(1,11) if i%2==0]\n",
+    "print(li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9ed46d31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['odd', 2, 'odd', 4, 'odd', 6, 'odd', 8, 'odd', 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "li=([i if i%2==0 else \"odd\" for i in range(1,11)])\n",
+    "print(li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "63f0f2f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'odd'), (2, 'even'), (3, 'odd'), (4, 'even'), (5, 'odd'), (6, 'even'), (7, 'odd'), (8, 'even'), (9, 'odd'), (10, 'even')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "li=[ (i,\"even\") if i %2==0 else(i,\"odd\") for i in range(1,11)]\n",
+    "print(li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "145490ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['stay', 'home', 'stay', 'safe']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=['stay home','stay safe']\n",
+    "li=[]\n",
+    "for i in a:\n",
+    "    for j in i.split():\n",
+    "        li.append(j)\n",
+    "print(li)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d3f8d05f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['stay', 'home', 'stay', 'safe']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=[j for i in a for j  in i.split()]\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b0162529",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
+       " [2, 4, 6, 8, 10, 12, 14, 16, 18, 20],\n",
+       " [3, 6, 9, 12, 15, 18, 21, 24, 27, 30],\n",
+       " [4, 8, 12, 16, 20, 24, 28, 32, 36, 40],\n",
+       " [5, 10, 15, 20, 25, 30, 35, 40, 45, 50],\n",
+       " [6, 12, 18, 24, 30, 36, 42, 48, 54, 60],\n",
+       " [7, 14, 21, 28, 35, 42, 49, 56, 63, 70],\n",
+       " [8, 16, 24, 32, 40, 48, 56, 64, 72, 80],\n",
+       " [9, 18, 27, 36, 45, 54, 63, 72, 81, 90],\n",
+       " [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[[i*j for i in range(1,11)]for j in range(1,11)]\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6316fa36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'21A85A0507': 'jyothi', '21A85A0605': 'dhana', '21A85A0518': 'valli'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dictionary comprehension\n",
+    "id_no=['21A85A0507','21A85A0605','21A85A0518']\n",
+    "names=['jyothi','dhana','valli']\n",
+    "c={}\n",
+    "for(key,value) in zip(id_no,names):\n",
+    "    c[key]=value\n",
+    "print(c)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "517ee50a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 2, 2: 4, 3: 6, 4: 8, 5: 10, 6: 12, 7: 14, 8: 16, 9: 18, 10: 20}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d={i:i*2 for i in range(1,11)}\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b41c8f16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'j': 1, 'y': 1, 'o': 1, 't': 1, 'h': 1, 'i': 1, 'k': 1, 'a': 1}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li=['j','y','o','t','h','i','k','a']\n",
+    "{i:li.count(i) for i in li}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "585fcda9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'a', 1: 'b', 2: 'c', 3: 'd', 4: 'e', 5: 'f', 6: 'g', 7: 'h', 8: 'i', 9: 'j', 10: 'k', 11: 'l', 12: 'm', 13: 'n', 14: 'o', 15: 'p', 16: 'q', 17: 'r', 18: 's', 19: 't', 20: 'u', 21: 'v', 22: 'w', 23: 'x', 24: 'y', 25: 'z'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# {0:A 1:B 2:C 3:D}\n",
+    "d={i:chr(97+i) for i in range(26)}\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "463cf7aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'a',\n",
+       " 1: 'b',\n",
+       " 2: 'c',\n",
+       " 3: 'd',\n",
+       " 4: 'e',\n",
+       " 5: 'f',\n",
+       " 6: 'g',\n",
+       " 7: 'h',\n",
+       " 8: 'i',\n",
+       " 9: 'j',\n",
+       " 10: 'k',\n",
+       " 11: 'l',\n",
+       " 12: 'm',\n",
+       " 13: 'n',\n",
+       " 14: 'o',\n",
+       " 15: 'p',\n",
+       " 16: 'q',\n",
+       " 17: 'r',\n",
+       " 18: 's',\n",
+       " 19: 't',\n",
+       " 20: 'u',\n",
+       " 21: 'v',\n",
+       " 22: 'w',\n",
+       " 23: 'x',\n",
+       " 24: 'y',\n",
+       " 25: 'z'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d={i:chr(97+i) for i in range(26)}\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "de33ac6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'jessy': 5, 'dhana': 5, 'valli': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "names=['jessy','dhana','valli']\n",
+    "d={i:len(i) for i in names}\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7b6ee1a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{6, 12, 18, 24, 30}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set comprehension\n",
+    "s={i*3 for i in range(1,11) if i%2==0}\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "57644a67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{6, 12, 18, 234}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s={i*3 for i in [1,2,3,4,5,6,78,9] if i%2==0}\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "733f30a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object <genexpr> at 0x000000437A5AF820>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# generator comprehension\n",
+    "c=(i*3 for i in range(5))\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6c1944d",
+   "metadata": {},
+   "source": [
+    "### iterators and generators\n",
+    "- iterator:iter is an object in python,it contains no elements\n",
+    "- 2 methods\n",
+    "    - iter\n",
+    "    - next\n",
+    "- list,set,tuple,dictionary these all are iterable objects   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "743400e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=\"python\"\n",
+    "for i in a:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "37604605",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<str_iterator object at 0x000000437B51CA60>\n",
+      "p\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=iter('python')\n",
+    "print(s)\n",
+    "print(next(s))\n",
+    "print(next(s))\n",
+    "print(next(s))\n",
+    "print(next(s))\n",
+    "print(next(s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d4fbec6",
+   "metadata": {},
+   "source": [
+    "### Generators\n",
+    "- generator can be used to either functions or comprehension\n",
+    "- it returns a iterator or objects\n",
+    "- in generator 'yield' can be used in place of return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "26c8eb7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "place\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'e'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def python():\n",
+    "    return 'e'\n",
+    "print('place')\n",
+    "python()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "33561e8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mango\n",
+      "program\n",
+      "sdc\n"
+     ]
+    }
+   ],
+   "source": [
+    "def python():\n",
+    "    yield 'mango'\n",
+    "    yield 'program'\n",
+    "    yield 'sdc'\n",
+    "# python\n",
+    "for ch in python():\n",
+    "    print(ch)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73f352d5",
+   "metadata": {},
+   "source": [
+    "## Functional programming\n",
+    "- lambda\n",
+    "- map\n",
+    "- filter\n",
+    "- reduce"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "404cac42",
+   "metadata": {},
+   "source": [
+    "### Lambda\n",
+    "- anonymous function or single line function\n",
+    "- single expression,no of arguments\n",
+    "- syntax::lambda arguments:expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "85bde673",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add(a,b):\n",
+    "    return a+b\n",
+    "add(7,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a874cb4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=lambda a,b:a+b\n",
+    "print(b(5,4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d222f33",
+   "metadata": {},
+   "source": [
+    "### map\n",
+    "- syntax::map(function iterable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "66d78c48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 4, 6, 8, 10, 12, 14}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s=set(map(lambda i:i*2,[1,2,3,4,5,6,7]))\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c56e8710",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mul(i):\n",
+    "    return i*3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "23d118f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 9, 12, 15, 18, 21, 24]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li=list(map(mul,[2,3,4,5,6,7,8]))\n",
+    "li"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c893726",
+   "metadata": {},
+   "source": [
+    "### Filter"
+   ]
   }
  ],
  "metadata": {
